# tract

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: colors.h  constants.h  main.c  tesseract_types.h  token.h  typedefs.h
src/cmd_parser/: cmd_parser.c  cmd_parser.h
src/cmdparser/: CMDParser.c  CMDParser.h
src/engine/: engine.c  engine.h
src/engine/buffer_manager/: buffer_manager.c  buffer_manager.h
src/engine/code_parser/: code_parser.c  code_parser.h
src/engine/parser/: parser.h
src/file_check/: file_check.c  file_check.h
src/terminal_utils/: terminal_utils.c  terminal_utils.h
src/tesseract_animation/: tesseract_animation.c  tesseract_animation.h
src/tesseract_animation/render/: render_tesseract.c  render_tesseract.h  render_text.c  render_text.h
src/tesseract_animation/render/render_tesseract/: render_tesseract.c  render_tesseract.h
src/tesseract_animation/render/render_text/: render_text.c
